compiler/tools/fpp-check/test/param/missing_ports.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/param/missing_ports.fpp: 1.1
passive component C {
^
error: component with parameter specifiers must have param get port
